added initial front end and logic for uploading files

--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -1,8 +1,15 @@
 #landing-page-container {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #1D345E;
 }
+
+
+#upload-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
