cleaned up the ui a bit

--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -9,7 +9,9 @@
 
 #upload-button-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
 }
 
