--- a/client/src/components/ChatPage/ChatPage.css
+++ b/client/src/components/ChatPage/ChatPage.css
@@ -12,7 +12,7 @@ body {
 }
 
 .chat-box {
-  width: 100%;
+  width: 100vw;
   max-width: 800px;
   height: 80vh;
   background: rgba(255, 255, 255, 0.75);
